--- a/composer.json
+++ b/composer.json
@@ -1,27 +1,31 @@
 {
-    "name": "herrera-io/doctrine-dateinterval",
+    "name": "tubssp/doctrine-dateinterval",
     "description": "Supports DateInterval in Doctrine DBAL and ORM.",
     "keywords": ["doctrine", "date", "interval"],
-    "homepage": "http://herrera-io.github.com/php-doctrine-dateinterval",
+    "homepage": "https://github.com/tubssp/php-doctrine-dateinterval",
     "license": "MIT",
     "authors": [
         {
             "name": "Kevin Herrera",
             "email": "kevin@herrera.io",
             "homepage": "http://kevin.herrera.io"
+        },
+        {
+            "name": "Andreas Lemke",
+            "email": "andreas.lemke@tu-braunschweig.de"
         }
     ],
     "support": {
-        "issues": "https://github.com/herrera-io/php-doctrine-dateinterval/issues"
+        "issues": "https://github.com/tubssp/php-doctrine-dateinterval/issues"
     },
     "require": {
         "php": ">=5.3.3",
-        "doctrine/dbal": "~2.2,>=2.2.3",
-        "herrera-io/date-interval": "~1.1"
+        "doctrine/dbal": "~2,>=2.2.3",
+        "tubssp/date-interval": "~1.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "doctrine/orm": "~2.2,>=2.2.3"
+        "phpunit/phpunit": "3.7.*|~4|~5",
+        "doctrine/orm": "~2,>=2.2.3"
     },
     "autoload": {
         "psr-0": {
