--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "tubssp/doctrine-dateinterval",
+    "name": "tubssz/doctrine-dateinterval",
     "description": "Supports DateInterval in Doctrine DBAL and ORM.",
     "keywords": ["doctrine", "date", "interval"],
-    "homepage": "https://github.com/tubssp/php-doctrine-dateinterval",
+    "homepage": "https://github.com/tubssz/php-doctrine-dateinterval",
     "license": "MIT",
     "authors": [
         {
@@ -16,12 +16,12 @@
         }
     ],
     "support": {
-        "issues": "https://github.com/tubssp/php-doctrine-dateinterval/issues"
+        "issues": "https://github.com/tubssz/php-doctrine-dateinterval/issues"
     },
     "require": {
         "php": ">=5.3.3|7",
         "doctrine/dbal": "~2,>=2.2.3",
-        "tubssp/date-interval": "~1.3.1"
+        "tubssz/date-interval": "~1.3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*|~4|~5",
