--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,9 @@ php:
     - 5.3
     - 5.4
     - 7
-    - 7.1
 
 before_script:
     - composer self-update
-    - composer install --dev
+    - composer install --dev --no-interaction --prefer-source
 
 script: bin/phpunit
