--- a/composer.json
+++ b/composer.json
@@ -1,44 +1,52 @@
 {
-    "name": "tubssz/doctrine-dateinterval",
-    "description": "Supports DateInterval in Doctrine DBAL and ORM.",
-    "keywords": ["doctrine", "date", "interval"],
-    "homepage": "https://github.com/tubssz/php-doctrine-dateinterval",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Kevin Herrera",
-            "email": "kevin@herrera.io",
-            "homepage": "http://kevin.herrera.io"
-        },
-        {
-            "name": "Andreas Lemke",
-            "email": "andreas.lemke@tu-braunschweig.de"
-        }
-    ],
-    "support": {
-        "issues": "https://github.com/tubssz/php-doctrine-dateinterval/issues"
+  "name": "doctrineum/date-interval",
+  "description": "Adds DateInterval to Doctrine DBAL and ORM",
+  "keywords": [
+    "doctrine",
+    "dateinterval",
+    "date",
+    "interval"
+  ],
+  "homepage": "https://github.com/jaroslavtyc/doctrineum-date-interval",
+  "license": "MIT",
+  "original-authors": [
+    {
+      "name": "Kevin Herrera",
+      "email": "kevin@herrera.io",
+      "homepage": "http://kevin.herrera.io"
     },
-    "require": {
-        "php": ">=5.3.3|7",
-        "doctrine/dbal": "~2,>=2.2.3",
-        "tubssz/date-interval": "~1.3.4"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "3.7.*|~4|~5",
-        "doctrine/orm": "~2,>=2.2.3"
-    },
-    "autoload": {
-        "psr-0": {
-            "Herrera\\Doctrine": "src/lib"
-        }
-    },
-    "config": {
-        "bin-dir": "bin",
-        "vendor-dir": "src/vendors"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
+    {
+      "name": "Andreas Lemke",
+      "email": "andreas.lemke@tu-braunschweig.de"
     }
+  ],
+  "editors": [
+    {
+      "name": "Jaroslav Týc",
+      "email": "mail@jaroslavtyc.com"
+    }
+  ],
+  "require": {
+    "php": ">=5.4|7",
+    "ext-bcmath": "*",
+    "doctrine/dbal": "~2,>=2.2.3",
+    "tubssz/date-interval": "~1.3.4"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4|~5",
+    "doctrine/orm": "~2,>=2.2.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "Doctrineum\\": "Doctrineum"
+    }
+  },
+  "config": {
+    "bin-dir": "bin"
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0-dev"
+    }
+  }
 }
