--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,25 +1,26 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<phpunit backupGlobals="true"
-         backupStaticAttributes="false"
-         bootstrap="src/tests/bootstrap.php"
-         colors="true"
-         stopOnError="false"
-         stopOnFailure="false"
-         stopOnIncomplete="false"
-         stopOnSkipped="false"
-         strict="true"
-         verbose="false">
-  <php>
-    <ini name="error_reporting" value="E_ALL &amp; ~E_STRICT"/>
-  </php>
-  <filter>
-    <whitelist>
-      <directory suffix=".php">src/lib/</directory>
-    </whitelist>
-  </filter>
+<phpunit
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.8/phpunit.xsd"
+        bootstrap="./Doctrineum/Tests/tests_bootstrap.php"
+        convertErrorsToExceptions="true"
+        convertNoticesToExceptions="true"
+        convertWarningsToExceptions="true"
+        stopOnFailure="false"
+        processIsolation="false"
+        backupGlobals="false"
+        colors="true"
+>
   <testsuites>
-    <testsuite name="Doctrine DateInterval Type Test Suite">
-      <directory phpVersion="5.3.0" phpVersionOperator=">=" suffix="Test.php">src/tests/</directory>
+    <testsuite name="all">
+      <directory>./Doctrineum/Tests</directory>
     </testsuite>
   </testsuites>
+  <filter>
+    <whitelist addUncoveredFilesFromWhitelist="true" processUncoveredFilesFromWhitelist="false">
+      <directory>./Doctrineum</directory>
+      <exclude>
+        <directory>./Doctrineum/Tests</directory>
+      </exclude>
+    </whitelist>
+  </filter>
 </phpunit>
