--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~4|~5",
-    "doctrine/orm": "~2,>=2.2.3"
+    "doctrine/orm": "~2,>=2.2.3",
+    "mockery/mockery": "dev-master"
   },
   "autoload": {
     "psr-4": {
