--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,22 @@
-language: php
+sudo: false # @link https://docs.travis-ci.com/user/workers/container-based-infrastructure/
 
+language: php
 php:
-    - 5.3
-    - 5.4
-    - 7
+  - 7.0
+  - 5.6
+  - 5.5
+  - 5.4
+  - nightly
+  - hhvm
+
+matrix:
+  allow_failures:
+    - php: nightly
 
 before_script:
-    - composer self-update
-    - composer install --dev --no-interaction --prefer-source
+  - if [[ $TRAVIS_PHP_VERSION =~ ^[0-9]+[.][0-9]+$ ]]; then phpenv config-rm xdebug.ini; fi
+  - composer selfupdate
+  - composer update --dev --no-interaction --prefer-source
 
-script: bin/phpunit
+script:
+  - ./vendor/phpunit/phpunit/phpunit -v
