--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
 before_script:
   - if [[ $TRAVIS_PHP_VERSION =~ ^[0-9]+[.][0-9]+$ ]]; then phpenv config-rm xdebug.ini; fi
   - composer selfupdate
-  - composer update --dev --no-interaction --prefer-source
+  - composer update --dev --no-interaction --prefer-source # source is required because of Doctrine ORM composer.json archive.exclude.tests directive and we need those...
 
 script:
   - ./vendor/phpunit/phpunit/phpunit -v
