--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "php": ">=5.5",
     "ext-bcmath": "*",
     "doctrine/dbal": "~2,>=2.2.3",
-    "tubssz/date-interval": "~1.3.4"
+    "tubssz/date-interval": "~1.3.4",
+    "doctrineum/self-registering-type": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "~4|~5",
@@ -49,5 +50,7 @@
     "branch-alias": {
       "dev-master": "1.0-dev"
     }
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
