--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,13 @@
   ],
   "homepage": "https://github.com/jaroslavtyc/doctrineum-date-interval",
   "license": "MIT",
-  "original-authors": [
+  "author": [
+    {
+      "name": "Jaroslav Týc",
+      "email": "mail@jaroslavtyc.com"
+    }
+  ],
+  "men-of-inspiration": [
     {
       "name": "Kevin Herrera",
       "email": "kevin@herrera.io",
@@ -20,17 +26,10 @@
       "email": "andreas.lemke@tu-braunschweig.de"
     }
   ],
-  "editors": [
-    {
-      "name": "Jaroslav Týc",
-      "email": "mail@jaroslavtyc.com"
-    }
-  ],
   "require": {
-    "php": ">=5.5",
+    "php": ">=5.5|~7.0",
     "ext-bcmath": "*",
     "doctrine/dbal": "~2,>=2.2.3",
-    "tubssz/date-interval": "~1.3.4",
     "doctrineum/self-registering-type": "dev-master"
   },
   "require-dev": {
