--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "php": ">=5.5|~7.0",
     "ext-bcmath": "*",
     "doctrine/dbal": "~2,>=2.2.3",
-    "doctrineum/self-registering-type": "dev-master"
+    "doctrineum/self-registering-type": "dev-master",
+    "herrera-io/date-interval": "^1.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~4|~5",
