--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
   "require-dev": {
     "phpunit/phpunit": "~4|~5",
     "doctrine/orm": "~2,>=2.2.3",
-    "mockery/mockery": "dev-master"
+    "mockery/mockery": "dev-master",
+    "ext-pdo_sqlite": "*"
   },
   "autoload": {
     "psr-4": {
