--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ script:
   - ./vendor/phpunit/phpunit/phpunit -v --coverage-clover build/logs/clover.xml
 
 after_script:
-  - CODECLIMATE_REPO_TOKEN=65f2616436b9bd5a63adc81451135ee71781af46e6c10132fadf219e97dcedbc ./vendor/bin/test-reporter
+  - CODECLIMATE_REPO_TOKEN=65f2616436b9bd5a63adc81451135ee71781af46e6c10132fadf219e97dcedbc ./bin/test-reporter
