--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
   "require-dev": {
     "phpunit/phpunit": ">=4.2",
     "doctrine/orm": "~2,>=2.2.3",
-    "mockery/mockery": "dev-master",
+    "mockery/mockery": "~0.9",
     "ext-pdo_sqlite": "*"
   },
   "autoload": {
