--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "granam/date-interval": "^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=4.2",
+    "phpunit/phpunit": "~5.0",
     "doctrine/orm": "~2,>=2.2.3",
     "mockery/mockery": "~0.9",
     "ext-pdo_sqlite": "*"
@@ -42,14 +42,6 @@
   "autoload": {
     "psr-4": {
       "Doctrineum\\": "Doctrineum"
-    }
-  },
-  "config": {
-    "bin-dir": "bin"
-  },
-  "extra": {
-    "branch-alias": {
-      "dev-master": "1.0-dev"
     }
   },
   "minimum-stability": "dev",
