--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,14 @@
     }
   ],
   "require": {
-    "php": ">=5.6",
+    "php": ">=7.0",
     "ext-bcmath": "*",
     "doctrine/dbal": "~2,>=2.2.3",
     "doctrineum/self-registering-type": "dev-master",
-    "granam/date-interval": "^2.0"
+    "granam/date-interval": "dev-master"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.0",
+    "phpunit/phpunit": "~6.0",
     "doctrine/orm": "~2,>=2.2.3",
     "mockery/mockery": "~0.9",
     "ext-pdo_sqlite": "*"
