--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,10 @@
     "granam/date-interval": "dev-master"
   },
   "require-dev": {
-    "phpunit/phpunit": "~6.0",
+    "roave/security-advisories": "dev-master",
+    "phpunit/phpunit": "~7.0",
     "doctrine/orm": "~2,>=2.2.3",
-    "mockery/mockery": "~0.9",
+    "mockery/mockery": "~1.0",
     "ext-pdo_sqlite": "*"
   },
   "autoload": {
